deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: cont-1
          image: ayaz4411/bapp:app

          ports:
            - containerPort: 80

          # configmap integration
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "1000m"
              memory: "700Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
